[tool.poetry]
name = "pricer"
version = "0.1.0"
description = ""
authors = ["mehmetcc <mehmetccm@gmail.com>"]
readme = "README.md"
packages = [{ include = "pricer", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}

[tool.poetry.scripts]
start = "src.pricer.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
